Added Test Scene

--- a/Unity/Assembly-CSharp-vs.csproj
+++ b/Unity/Assembly-CSharp-vs.csproj
@@ -49,6 +49,7 @@
      <Compile Include="assets\Trey\Character.cs" />
      <Compile Include="assets\Trey\Chase.cs" />
      <Compile Include="assets\Trey\Game.cs" />
+     <Compile Include="assets\Trey\PlayerCamera.cs" />
      <Compile Include="assets\Trey\PlayerCharacter.cs" />
      <Compile Include="assets\Trey\RadialDamage.cs" />
  <Reference Include="Assembly-UnityScript-firstpass">
