--- a/Unity/Assembly-CSharp.csproj
+++ b/Unity/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="assets\Roy\SpawnEnemies.cs" />
      <Compile Include="assets\Trey\Character.cs" />
      <Compile Include="assets\Trey\Chase.cs" />
+     <Compile Include="assets\Trey\Dash.cs" />
      <Compile Include="assets\Trey\Game.cs" />
      <Compile Include="assets\Trey\PlayerCamera.cs" />
      <Compile Include="assets\Trey\PlayerCharacter.cs" />
