--- a/Unity/Assembly-CSharp-firstpass-vs.csproj
+++ b/Unity/Assembly-CSharp-firstpass-vs.csproj
@@ -46,7 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="assets\Standard Assets\Character Controllers\Sources\Scripts\BulletMove.cs" />
      <Compile Include="assets\Standard Assets\Character Controllers\Sources\Scripts\MouseLook.cs" />
+     <Compile Include="assets\Standard Assets\Character Controllers\Sources\Scripts\Shoot.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
