--- a/Unity/Assembly-CSharp-firstpass.csproj
+++ b/Unity/Assembly-CSharp-firstpass.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="assets\Standard Assets\Character Controllers\Sources\Scripts\BulletMove.cs" />
      <Compile Include="assets\Standard Assets\Character Controllers\Sources\Scripts\MouseLook.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
